# ciarc_record_observations_images

./: CMakeLists.txt  README.md  base64.hpp  log_parse.py  logger.cpp  record.hpp  serialize_observation.cpp
